[gd_scene load_steps=27 format=2]

[ext_resource path="res://varela-60.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/VarelaRound-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Main/Backgrounds/backgroundColorGrass.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Start.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MenuButtons.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Options.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Global.gd" type="Script" id=8]
[ext_resource path="res://Assets/Icons/PNG/White/2x/arrowLeft.png" type="Texture" id=9]
[ext_resource path="res://Assets/PopMenu/Gumb.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Sentence.gd" type="Script" id=12]
[ext_resource path="res://Scenes/BackButton.gd" type="Script" id=13]
[ext_resource path="res://Assets/Icons/PNG/White/2x/home.png" type="Texture" id=14]
[ext_resource path="res://Scenes/HomeButton.gd" type="Script" id=15]
[ext_resource path="res://Assets/PopMenu/Okvir.png" type="Texture" id=16]
[ext_resource path="res://Scenes/SuggestedAnswers.gd" type="Script" id=17]
[ext_resource path="res://Scenes/DraggableTextureRectScene.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/PopMenu/StisnutiGumb.png" type="Texture" id=19]
[ext_resource path="res://Scenes/ResetButton.gd" type="Script" id=20]
[ext_resource path="res://Assets/Icons/PNG/White/2x/return.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Title" type="Label" parent="UI"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.145098, 0.294118, 0.439216, 1 )
text = "RIJEČALICA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="Node2D" parent="UI"]
script = ExtResource( 6 )

[node name="PopupMenu" type="PopupMenu" parent="UI/MenuButtons"]
margin_left = 624.0
margin_top = 352.0
margin_right = 644.0
margin_bottom = 372.0
hide_on_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/MenuButtons/PopupMenu"]
position = Vector2( 8, 48 )
scale = Vector2( 0.397059, 0.410364 )
texture = ExtResource( 16 )

[node name="Title" type="Label" parent="UI/MenuButtons/PopupMenu"]
margin_left = -168.0
margin_top = -120.0
margin_right = 181.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bravo! To je točan odgovor!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="UI/MenuButtons/PopupMenu"]
margin_left = -144.0
margin_top = -40.0
margin_right = 168.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Točna rečenica glasila je:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullSentence" type="Label" parent="UI/MenuButtons/PopupMenu"]
margin_left = -144.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="UI/MenuButtons/PopupMenu"]
margin_left = -144.0
margin_top = 104.0
margin_right = 156.0
margin_bottom = 234.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 19 )
expand = true

[node name="ButtonText" type="Label" parent="UI/MenuButtons/PopupMenu/TextureButton"]
margin_left = 56.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 5 )
text = "Nastavi"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 5 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons/Start"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 724.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 186.0
margin_right = 1280.0
margin_bottom = 266.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
enabled_focus_mode = 0
text = "Započni"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 270.0
margin_right = 1280.0
margin_bottom = 350.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
enabled_focus_mode = 0
text = "Opcije"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 354.0
margin_right = 1280.0
margin_bottom = 434.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
enabled_focus_mode = 0
text = "Izlaz"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Start"]

[node name="Options" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 1280, 100 )
script = ExtResource( 7 )

[node name="OptionsMenu" type="VBoxContainer" parent="UI/MenuButtons/Options"]
margin_right = 1280.0
margin_bottom = 620.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="UI/MenuButtons/Options/OptionsMenu"]
margin_top = 186.0
margin_right = 1280.0
margin_bottom = 266.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
enabled_focus_mode = 0
text = "Lagano"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="UI/MenuButtons/Options/OptionsMenu"]
margin_top = 270.0
margin_right = 1280.0
margin_bottom = 350.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
enabled_focus_mode = 0
text = "Srednje"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="UI/MenuButtons/Options/OptionsMenu"]
margin_top = 354.0
margin_right = 1280.0
margin_bottom = 434.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
enabled_focus_mode = 0
text = "Teško"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Options"]

[node name="BackButton" type="TextureButton" parent="UI/MenuButtons/Options"]
margin_left = 100.0
margin_top = -50.0
margin_right = 200.0
margin_bottom = 50.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI"]

[node name="Sentence" type="Node2D" parent="."]
position = Vector2( 0, -300 )
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="Sentence"]
margin_right = 1280.0
margin_bottom = 192.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="Sentence"]

[node name="BackButton" type="Node2D" parent="."]
position = Vector2( 0, -100 )
script = ExtResource( 13 )

[node name="TextureButton" type="TextureButton" parent="BackButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="BackButton"]

[node name="HomeButton" type="Node2D" parent="."]
position = Vector2( 1179, -100 )
script = ExtResource( 15 )

[node name="TextureButton" type="TextureButton" parent="HomeButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="HomeButton"]

[node name="SuggestedAnswers" type="Node2D" parent="."]
position = Vector2( 0, 840 )
script = ExtResource( 17 )

[node name="HBoxContainer" type="HBoxContainer" parent="SuggestedAnswers"]
margin_top = -7.99994
margin_right = 1280.0
margin_bottom = 183.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuggestionBox" parent="SuggestedAnswers/HBoxContainer" instance=ExtResource( 18 )]
margin_left = 192.0
margin_top = 0.0
margin_right = 368.0
margin_bottom = 190.0
stretch_mode = 3

[node name="SuggestionBox2" parent="SuggestedAnswers/HBoxContainer" instance=ExtResource( 18 )]
margin_left = 372.0
margin_top = 0.0
margin_right = 548.0
margin_bottom = 190.0

[node name="SuggestionBox3" parent="SuggestedAnswers/HBoxContainer" instance=ExtResource( 18 )]
margin_left = 552.0
margin_top = 0.0
margin_right = 728.0
margin_bottom = 190.0

[node name="SuggestionBox4" parent="SuggestedAnswers/HBoxContainer" instance=ExtResource( 18 )]
margin_left = 732.0
margin_top = 0.0
margin_right = 908.0
margin_bottom = 190.0

[node name="SuggestionBox5" parent="SuggestedAnswers/HBoxContainer" instance=ExtResource( 18 )]
margin_left = 912.0
margin_top = 0.0
margin_right = 1088.0
margin_bottom = 190.0

[node name="move_tween" type="Tween" parent="SuggestedAnswers"]

[node name="ResetButton" type="Node2D" parent="."]
position = Vector2( 0, 720 )
script = ExtResource( 20 )

[node name="TextureButton" type="TextureButton" parent="ResetButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="ResetButton"]
[connection signal="pressed" from="UI/MenuButtons/PopupMenu/TextureButton" to="." method="popUpButtonPressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Start" to="UI/MenuButtons" method="StartPressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Options/OptionsMenu/Easy" to="." method="easyPressed"]
[connection signal="pressed" from="UI/MenuButtons/Options/OptionsMenu/Medium" to="." method="mediumPressed"]
[connection signal="pressed" from="UI/MenuButtons/Options/OptionsMenu/Hard" to="." method="hardPressed"]
[connection signal="pressed" from="UI/MenuButtons/Options/BackButton" to="UI/MenuButtons" method="backButtonPressed"]
[connection signal="pressed" from="BackButton/TextureButton" to="." method="inGameBackButtonPressed"]
[connection signal="pressed" from="HomeButton/TextureButton" to="." method="homeButtonPressed"]
[connection signal="pressed" from="ResetButton/TextureButton" to="." method="resetButtonPressed"]
